// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > renders basic menu correctly 1`] = `
<DocumentFragment>
  <div
    class="relative w-fit"
  >
    <button
      aria-controls="«r0»"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Open menu"
      class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-5 h-5 text-neutral"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="12"
          cy="5"
          r="1"
        />
        <circle
          cx="12"
          cy="19"
          r="1"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders menu with different sizes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="relative w-fit"
    >
      <button
        aria-controls="«r1»"
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Open small menu"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-5 h-5 text-neutral"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
        </svg>
      </button>
    </div>
    <div
      class="relative w-fit"
    >
      <button
        aria-controls="«r2»"
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Open medium menu"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-ellipsis inline-flex items-center justify-center w-5 h-5 text-neutral"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="19"
            cy="12"
            r="1"
          />
          <circle
            cx="5"
            cy="12"
            r="1"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
